plugins {
    id 'org.springframework.boot' version '2.7.8-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.neeraj'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'

//    For Caching
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    implementation "org.junit.jupiter:junit-jupiter-api"

    //    UI Dependencies
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'com.github.darrachequesne:spring-data-jpa-datatables:5.2.0'

    //    Dependencies for spring validator
    implementation 'org.springframework.boot:spring-boot-starter-validation'


//    Dependencies for Google Bigquery
    implementation 'com.google.cloud:google-cloud-bigquery:2.19.1'


//    Dependencies for Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'io.confluent:kafka-avro-serializer:7.2.1'
    implementation 'org.apache.avro:avro:1.11.0'
    implementation 'org.apache.avro:avro-compiler:1.11.0'

    implementation 'org.modelmapper:modelmapper:3.1.1'
}

test {
    useJUnitPlatform()
}

// Source sets to pick up Avro classes within IDEs and builds.
sourceSets {
    main {
        java {
            srcDirs = [
                    "src/main/java",
                    "build/generated-main-avro-java"]
        }
    }
}